# self-optimizing-knowledge-engine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: gold_dataset.json
docs/adr/: 000-record-architecture-decisions.md  001-vector-store-selection.md
infra/: docker-compose.yml  prometheus.yml
infra/grafana/provisioning/dashboards/: dashboard.json
infra/vllm_stub/: Dockerfile  server.py
scripts/: check_regression.py  generate_gold_dataset.py
src/knowledge_engine/: config.py
src/knowledge_engine/evaluation/: braintrust_judge.py  metrics.py  ragas_pipeline.py  regression_gate.py
src/knowledge_engine/generation/: base.py  slm_generator.py  sonnet_generator.py
src/knowledge_engine/ingestion/: chunker.py  edgar_client.py  parser.py
src/knowledge_engine/retrieval/: bm25_index.py  embedder.py  reranker.py  rrf_fusion.py  vector_store.py
tests/fixtures/: gold_qa_5.json  sample_10k.txt
tests/unit/: test_braintrust.py  test_chunker.py  test_config.py  test_embedder.py  test_generators.py  test_gold_dataset.py  test_parser.py  test_ragas_pipeline.py  test_regression_gate.py  test_retrieval.py
