[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-engine"
version = "0.1.0"
description = "Evaluation-first RAG over SEC EDGAR 10-K filings"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.40.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
training = [
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "peft>=0.11.0",
    "trl>=0.8.6",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.19.0",
]
braintrust = [
    "braintrust>=0.0.150",
]
eval = [
    "ragas>=0.1.9",
    "sacrebleu>=2.4.0",
    "rouge-score>=0.1.2",
    "langsmith>=0.1.77",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "testcontainers[postgresql,qdrant]>=4.4.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
    "types-beautifulsoup4>=4.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "use_case: end-to-end use case scenarios",
    "integration: requires running services",
    "gpu: requires GPU",
]

[tool.coverage.run]
source = ["src/knowledge_engine"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
